# ocypus-digital-rs

./: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  config.toml  install.sh  ocypus-digital.service
src/: config.rs  cpu_sensor.rs  device.rs  error.rs  gpu_sensor.rs  main.rs  monitor.rs
src/sensor/: cpu_sensor.rs  gpu_sensor.rs  mod.rs
